# nrg-experiments

./: README.md  documentation.md
cv/: README.md  calibration.py  camera.py  detector.py  generate_board.py  main.py  model.py  network.py  networkconfigure.py  photonvision.service  photonvision2.service  photonvision_config.json  pyproject.toml  server.py  setup.sh  test2.py
cv/www/: index.html
