[project]
name = "cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "psutil>=7.1.3",
    "pupil-apriltags>=1.0.4.post11",
    "requests>=2.32.5",
    "scipy>=1.16.3",
]
