[project]
name = "cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "aiologger>=0.7.0",
    "cv2-enumerate-cameras>=1.3.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "photonlibpy>=2026.0.1",
    "psutil>=7.1.3",
    "pupil-apriltags>=1.0.4.post11",
    "pydantic>=2.12.4",
    "pynetworktables>=2021.0.0",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "websockets>=15.0.1",
]
