[project]
name = "cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "aiologger>=0.7.0",
    "briefcase>=0.3.26",
    "cv2-enumerate-cameras>=1.3.0",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "photonlibpy>=2026.1.1",
    "pupil-apriltags>=1.0.4.post11",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "robotpy-apriltag>=2026.2.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pyinstaller>=6.17.0",
    "pyinstrument>=5.1.1",
    "pynetworktables>=2021.0.0",
    "pyprof2calltree>=1.4.5",
]
